  * SA/PA merge (#540)
  * Fix link to SignMeUp (#653)
  * Include email address in account change request emails (#626)
  * Check permissions and remove dead code in do-edit-project (#666)
  * Ensure SA/PA methods all have guards or we warn why not (#540)
  * Hide Update Project button if user not permitted (#540)
  * CS logs if it authorizes an action only cause you are an operator (#397)

== 1.8.1 ==
  * Modifications to KM tool and user to make sure EPPN's 
       are uniformly lower case (so that IDP's that provide mixed-case match)

== 1.8 ==
  * Portal website refers to incorrect 'footer.php' file (#633)
  * Use a tempfile for list of members on import db (#632)
  * Handle no-key/no-cert case in update_user_certs (#631)
  * Fix GEMINI ssh private key data (#628)
  * Fix OpenID service registry error (#618)
  * Conditionalize display of the generate ssh key button (#625)
  * tools-admin.php is fake (#539)
  * Update GEMINI integration (#623)
  * gemini.php is issuing PHP warnings (#619)
  * Modify the "Join the project" default email text (#616)
  * Fix email bounces in do-handle-project-request.php (#611)
  * Add login information for multiple users (#510) 

== 1.7.1 ==
  * Add `do-handle-project-request.php` to Makefile.am (#609)
  * Month in expiration date should be incremented by one (#610)

== 1.7 ==
  * Added an HTML index page for clearinghouse hosts (#595)
  * Removed obsolete create_standard_services.sh script (#587)
  * Add a "delete" ssh key button to Profile page (#542)
  * Call setClientCert with an array instead of a string (#592)
  * Add GEMINI button(s) to home page (#602)
  * Add project info to GEMINI data (#585)
  * Add ssh keys to GEMINI data (#604)
  * Update OpenID for portal.geni.net (#594)
  * List of project in download omni bundle should only include active projects (#554)
  * On new project page, note showing that name of lead is public (#469)
  * Have raw manifest appear in a separate window/tab/popup (#520)